fix(accordion): update alignment prop, update styles and story

--- a/src/components/Accordion/_index.scss
+++ b/src/components/Accordion/_index.scss
@@ -8,46 +8,36 @@
 
 @include export-namespace($name: 'accordion') {
   .#{$prefix}--accordion {
-    &__heading {
-      flex-direction: row;
-    }
-
-    &__arrow {
-      margin: 0 0 0 $carbon--spacing-03;
-      transform: rotate(0deg);
-    }
-
-    &__item--active {
-      .#{$prefix}--accordion__title {
-        font-weight: 600;
+    &.#{$namespace}accordion--left {
+      .#{$prefix}--accordion__heading {
+        flex-direction: row;
       }
 
       .#{$prefix}--accordion__arrow {
+        margin: 0 0 0 $carbon--spacing-03;
+        transform: rotate(0deg);
+      }
+
+      .#{$prefix}--accordion__item--active .#{$prefix}--accordion__arrow {
         transform: rotate(90deg);
       }
-    }
 
-    // TODO - needs to be fixed on Carbon's side.
-    &--accordion__title {
-      @include carbon--type-style($name: body-long-01);
-    }
-
-    &__content {
-      margin-left: $carbon--spacing-06;
-
-      // TODO - needs to be fixed on Carbon's side.
-      p {
-        @include carbon--type-style($name: body-long-01);
+      .#{$prefix}--accordion__content {
+        margin-left: $carbon--spacing-06;
       }
+    }
 
-      // Prevents gaps between closed accordion items.
-      & > * {
-        &:first-child {
-          margin-top: 0;
-        }
-        &:last-child {
-          margin-bottom: 0;
-        }
+    &__item--active &__title {
+      font-weight: 600;
+    }
+
+    // Prevents gaps between closed accordion items.
+    &__content > * {
+      &:first-child {
+        margin-top: 0;
+      }
+      &:last-child {
+        margin-bottom: 0;
       }
     }
   }
